<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:src="@drawable/main_title"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/bt_noise"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="45dp"
        android:layout_weight="1"
        android:background="@drawable/selector_button_color"
        android:text="@string/db_meter"
        android:textColor="@color/button_text_color"
        android:textSize="35sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bt_voice"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="45dp"
        android:layout_weight="1"
        android:background="@drawable/selector_button_color"
        android:text="@string/hz_meter"
        android:textColor="@color/button_text_color"
        android:textSize="35sp"
        android:textStyle="bold" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>