<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_top_bar"
    android:layout_width="match_parent"
    android:layout_height="@dimen/top_bar_height"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/tv_left"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@drawable/selector_title_click_bg"
        android:drawablePadding="1dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/back"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:drawableLeftCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:maxWidth="220dp"
        android:singleLine="true"
        android:text="@string/long_title_test"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_right"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@drawable/selector_title_click_bg"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/right"
        android:visibility="invisible"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

</RelativeLayout>